AM_CXXFLAGS = -Wall 

bin_PROGRAMS = JPEG_VideoViewer

JPEG_VideoViewer_SOURCES = JPEG_VideoViewer.cpp JPEG_VideoViewer.h main.cpp utils.cpp utils.h

ossieName = JPEG_VideoViewer
xmldir = $(prefix)/xml/$(ossieName)
dist_xml_DATA = JPEG_VideoViewer.prf.xml JPEG_VideoViewer.scd.xml \
JPEG_VideoViewer.spd.xml 

