lib_LTLIBRARIES = libossiecf.la
libossiecf_la_SOURCES = ApplicationFactory_impl.cpp File_impl.cpp Application_impl.cpp FileManager_impl.cpp PortSupplier_impl.cpp Device_impl.cpp FileSystem_impl.cpp PropertySet_impl.cpp DeviceManager_impl.cpp LifeCycle_impl.cpp Resource_impl.cpp DomainManager_impl.cpp ExecutableDevice_impl.cpp LoadableDevice_impl.cpp TestableObject_impl.cpp applicationSupport.cpp debug.cpp ossieComponent.cpp

EXTRA_DIST = StdAfx.cpp StdAfx.h ossiecf.cpp ossiecf.sln ossiecf.vcproj ossiecf.dsw dirent.h

libossiecf_la_LDFLAGS = -version-info 0:4:0

AM_CXXFLAGS = -Wall -g

INCLUDES = -I../include
